Updated profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aditya Kane"
-  avatar           : "me_v2.png"
+  avatar           : "me_v2.jpeg"
   bio              : "Computer Vision and Deep Learning"
   location         : "Pune, India"
   employer         :
