--- a/_config.yml
+++ b/_config.yml
@@ -247,6 +247,14 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _opensource
+  - scope:
+      path: ""
+      type: opensource
+    values:
+      layout: single
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
