--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   #   url: /portfolio/
         
   - title: "Blog Posts"
-    url: /blogs/
+    url: /posts/
 
   - title: "Open source"
     url: /opensource/
