--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,6 @@ Name Name:
   uri         : ""
   email       : "adityakane1@gmail.com"
   bio         : "Computer Vision and Deep Learning"
-  avatar      : "me_v3.jpeg"
+  avatar      : "mev5_1.jpeg"
   twitter     : "adityakane1"
   google_plus : ""
