--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,7 @@
 # main links links
 main:
-  # - title: "Publications"
-  #   url: /publications/
-
-  - title: "Talks"
-    url: /talks/
+  - title: "Publications"
+    url: /publications/
 
   # - title: "Portfolio"
   #   url: /portfolio/
@@ -15,5 +12,5 @@ main:
   - title: "Open source"
     url: /opensource/
 
-  - title: "Publications"
-    url: /publication/
+  - title: "Talks"
+    url: /talks/
