--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Aditya Kane"
-  uri         : ""
-  email       : "adityakane1@gmail.com"
-  bio         : "Computer Vision and Deep Learning"
-  avatar      : "mev5_1.jpeg"
-  twitter     : "adityakane1"
-  google_plus : ""
+  name: "Aditya Kane"
+  uri: ""
+  email: "adityakane1@gmail.com"
+  bio: "Computer Vision and Deep Learning"
+  avatar: "chicago_dp.jpg"
+  twitter: "adityakane1"
+  google_plus: ""
