--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name: "Aditya Kane"
-  avatar: "mev5_1.jpeg"
+  avatar: "chicago_dp.jpg"
   bio: "Computer Vision and Natural Language Processing"
   location: "Pune, India"
   employer:
