--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name: "Aditya Kane"
   avatar: "chicago_dp.jpg"
   bio: "Computer Vision and Natural Language Processing"
-  location: "Pune, India"
+  location: "Atlanta, GA, United States"
   employer:
   pubmed:
   googlescholar: https://scholar.google.com/citations?user=A7o_o9YAAAAJ&hl=en
